--- a/rock_paper_scissors.ipynb
+++ b/rock_paper_scissors.ipynb
@@ -9,70 +9,73 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "YOU:  sang   COM: qeychi\n",
-      "YOU:     COM: kaqaz\n",
-      "YOU:  qeychi   COM: sang\n",
-      "YOU:  sang   COM: qeychi\n",
-      "YOU:  kaqaz   COM: qeychi\n",
-      "YOU:  sang   COM: qeychi\n",
+      "YOU:  R   COM: R\n",
+      "YOU:  S   COM: R\n",
+      "YOU:  P   COM: R\n",
+      "YOU:  S   COM: P\n",
+      "YOU:  P   COM: R\n",
       "YOU WIN :) \n",
-      "YOU:  3  -  sang\n",
-      "COM:  2  -  qeychi\n"
+      "YOU:  3  -  P\n",
+      "COM:  1  -  R\n"
      ]
     }
    ],
    "source": [
     "import random\n",
     "\n",
-    "bazi=[\"sang\", \"kaqaz\",\"qeychi\"]\n",
+    "game=[\"R\", \"P\",\"S\"]\n",
+    "\n",
+    "#R=rock\n",
+    "#P=paper\n",
+    "#S=scissors\n",
     "\n",
     "computer_print=0\n",
     "you_print=0\n",
     "\n",
     "\n",
-    "shart_bazi=True\n",
+    "shart_game=True\n",
     "\n",
     "\n",
     "\n",
-    "while(shart_bazi):\n",
+    "while(shart_game):\n",
     "\n",
-    "    you = input(\"choice (sang , kaqaz, qeychi): \")\n",
+    "    you = input(\"choice (R , P, S): \")\n",
     "\n",
     "    if you==\"0\":\n",
-    "        shart_bazi=False\n",
+    "        shart_game=False\n",
     "\n",
     "    \n",
     "    rand=random.randint(0,2)\n",
-    "    computer=bazi[rand]\n",
+    "    computer=game[rand]\n",
     "\n",
     "\n",
     "    \n",
     "\n",
-    "    if you==\"sang\" and computer==\"kaqaz\":\n",
+    "    if you==\"R\" and computer==\"P\":\n",
     "         computer_print=computer_print+1\n",
     "\n",
     "\n",
-    "    if you==\"kaqaz\" and computer==\"sang\":\n",
+    "    if you==\"P\" and computer==\"R\":\n",
     "       you_print=you_print+1\n",
     "\n",
-    "    if you==\"qeychi\" and computer==\"kaqaz\":\n",
+    "    if you==\"S\" and computer==\"P\":\n",
     "        you_print=you_print+1\n",
     "\n",
-    "    if you==\"qeychi\" and computer==\"sang\":\n",
+    "    if you==\"S\" and computer==\"R\":\n",
     "        computer_print=computer_print+1\n",
     "\n",
     "\n",
-    "    if you==\"sang\" and computer==\"qeychi\":\n",
+    "    if you==\"R\" and computer==\"S\":\n",
     "        you_print=you_print+1\n",
     "\n",
-    "    if you==\"kaqaz\" and computer==\"qeychi\":\n",
+    "    if you==\"P\" and computer==\"S\":\n",
     "          computer_print=computer_print+1\n",
     "\n",
     "\n",
     "    print(\"YOU: \",you,\"  COM:\", computer)\n",
     " \n",
     "    if you_print>=3 or computer_print>=3:\n",
-    "      shart_bazi=False\n",
+    "      shart_game=False\n",
     "        \n",
     "\n",
     "\n",
